--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 JacquardV2_Dataset_6.zip filter=lfs diff=lfs merge=lfs -text
+JacquardV2 filter=lfs diff=lfs merge=lfs -text
